Forge Beta: 11-#-2014 ver 1.5.31


# cards in total.


-------------
Release Notes
-------------




---------
New Cards
---------

Siege Behemoth
Myriad Landscape


------------
Known Issues
------------

- Commander 2014 cards -
Forge now includes many of the new Commander 2014 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- New Khans of Tarkir cards -
Forge now includes many of the new Khans of Tarkir cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- Continued Work on Conspiracy -
Conspiracy is one of the strangest sets that have been released in some time. Currently, we have a few of the "Draft matters" cards scripted, although you'll find that they won't quite be available to you (unless you add them manually into a draft deck). Hopefully we'll get the appropriate functionality in so we can start including them in boosters and allowing you to add Conspiracy type cards straight to your deck the way you do every other variant card. We'll make sure to point out when all of these kinks have worked themselves out.

- The Mac OS application version -