@@ -5595,6 +5595,7 @@ forge-gui/res/cardsfolder/f/flash.txt -text
 forge-gui/res/cardsfolder/f/flash_conscription.txt -text svneol=unset#text/plain
 forge-gui/res/cardsfolder/f/flash_counter.txt svneol=native#text/plain
 forge-gui/res/cardsfolder/f/flash_flood.txt svneol=native#text/plain
+forge-gui/res/cardsfolder/f/flash_foliage.txt -text
 forge-gui/res/cardsfolder/f/flash_of_defiance.txt svneol=native#text/plain
 forge-gui/res/cardsfolder/f/flash_of_insight.txt -text
 forge-gui/res/cardsfolder/f/flashfires.txt svneol=native#text/plain
