@@ -15,8 +15,9 @@ Release Notes
 New Cards
 ---------
 
-Siege Behemoth
+Flash Foliage
 Myriad Landscape
+Siege Behemoth
 
 
 ------------
